Parser/parser.output
Terminals unused in grammar

    DIM
    AS
    THEN
    PRINT
    PRINTF
    INTERROGACION
    DOT
    LEFT_BRACKET
    RIGHT_BRACKET
    PUSH_FRONT
    DOT_PUSH_BACK
    STRUCT
    REMOVE
    MEDIAN
    IOTA
    ATOI
    GET


State 14 conflicts: 3 shift/reduce
State 52 conflicts: 3 shift/reduce
State 66 conflicts: 1 shift/reduce
State 92 conflicts: 2 shift/reduce
State 97 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: s END

    1 s: lSentencia

    2 lSentencia: lSentencia sentencia z
    3           | sentencia z

    4 sentencia: declaracion_var
    5          | asignacion_var
    6          | imprimir
    7          | bloque
    8          | aumento
    9          | decremento
   10          | ciclo_for
   11          | ciclo_while
   12          | ins_if
   13          | escapa
   14          | retornovalor
   15          | declaracion_void
   16          | llamada
   17          | declaracion_vector
   18          | asignacion_vector
   19          | declaracion_matriz

   20 ciclo_for: FOR '(' declaracion_var z x z aumento ')' '{' lSentencia '}'

   21 ciclo_while: WHILE '(' x ')' '{' lSentencia '}'

   22 ins_if: IF '(' x ')' '{' lSentencia '}'
   23       | IF '(' x ')' '{' lSentencia '}' ELSE '{' lSentencia '}'
   24       | IF '(' x ')' '{' lSentencia '}' ELSE ins_if

   25 escapa: BREAK
   26       | CONTINUE
   27       | RETORNO

   28 retornovalor: RETORNO x

   29 llamada: ID '(' lparam ')'
   30        | ID '(' ')'

   31 aumento: INCREMENT ID
   32        | ID INCREMENT

   33 decremento: DECREMENT ID
   34           | ID DECREMENT

   35 imprimir: IMPR '(' lparam ')'

   36 bloque: '{' lSentencia '}'

   37 z: ';'
   38  | %empty

   39 declaracion_void: tipo ID '(' ')' bloque
   40                 | tipo ID '(' lasig ')' bloque

   41 lasig: lasig ',' declaracion_var
   42      | declaracion_var

   43 lparam: lparam ',' x
   44       | x

   45 lparamatriz: lparamatriz '[' x ']'
   46            | '[' x ']'

   47 declaracion_var: tipo ID
   48                | tipo ID '=' x

   49 declaracion_vector: VECTOR MENOR tipo MAYOR ID
   50                   | VECTOR MENOR tipo MAYOR ID '=' '[' lparam ']'

   51 declaracion_matriz: tipo ID lparamatriz

   52 asignacion_var: ID '=' x

   53 asignacion_vector: ID lparamatriz '=' x

   54 x: cond

   55 cond: cond OR cond
   56     | cond AND cond
   57     | NOT cond
   58     | '(' cond ')'
   59     | expr oprel expr
   60     | expr

   61 oprel: MAYOR
   62      | MENOR
   63      | IGUAL_IGUAL
   64      | MENOR_IGUAL
   65      | MAYOR_IGUAL
   66      | DIFERENTE

   67 expr: expr SUMA expr
   68     | expr MENOS expr
   69     | expr MULTIPLICACION expr
   70     | expr DIVISION expr
   71     | expr MOD expr
   72     | expr EXPONENCIAL expr
   73     | '(' expr ')'
   74     | INCREMENT ID
   75     | ID INCREMENT
   76     | DECREMENT ID
   77     | ID DECREMENT
   78     | MENOS expr
   79     | NUMERO
   80     | ID
   81     | ID lparamatriz
   82     | llamada
   83     | ID '.' SIZE '(' ')'
   84     | MEAN '(' ID ')'
   85     | STRING
   86     | FLOAT
   87     | TRUE
   88     | FALSE

   89 tipo: INT
   90     | STR
   91     | FLO
   92     | BOOL
   93     | VOID


Terminals, with rules where they appear

    END (0) 0
    '(' (40) 20 21 22 23 24 29 30 35 39 40 58 73 83 84
    ')' (41) 20 21 22 23 24 29 30 35 39 40 58 73 83 84
    ',' (44) 41 43
    '.' (46) 83
    ';' (59) 37
    '=' (61) 48 50 52 53
    '[' (91) 45 46 50
    ']' (93) 45 46 50
    '{' (123) 20 21 22 23 24 36
    '}' (125) 20 21 22 23 24 36
    error (256)
    NUMERO <std::string> (258) 79
    ID <std::string> (259) 29 30 31 32 33 34 39 40 47 48 49 50 51 52 53 74 75 76 77 80 81 83 84
    STRING <std::string> (260) 85
    INT <std::string> (261) 89
    STR <std::string> (262) 90
    FLOAT <std::string> (263) 86
    FLO <std::string> (264) 91
    BOOL <std::string> (265) 92
    SUMA (266) 67
    MENOS (267) 68 78
    DIM (268)
    AS (269)
    IMPR (270) 35
    MOD (271) 71
    VOID (272) 93
    TRUE (273) 87
    FALSE (274) 88
    AND (275) 56
    NOT (276) 57
    IF (277) 22 23 24
    THEN (278)
    ELSE (279) 23 24
    WHILE (280) 21
    PRINT (281)
    PRINTF (282)
    FOR (283) 20
    MULTIPLICACION (284) 69
    DIVISION (285) 70
    EXPONENCIAL (286) 72
    MENOR_IGUAL (287) 64
    MAYOR_IGUAL (288) 65
    IGUAL_IGUAL (289) 63
    DIFERENTE (290) 66
    MENOR (291) 49 50 62
    MAYOR (292) 49 50 61
    OR (293) 55
    INTERROGACION (294)
    INCREMENT (295) 31 32 74 75
    DECREMENT (296) 33 34 76 77
    DOT (297)
    LEFT_BRACKET (298)
    RIGHT_BRACKET (299)
    VECTOR (300) 49 50
    PUSH_FRONT (301)
    DOT_PUSH_BACK (302)
    STRUCT (303)
    REMOVE (304)
    MEDIAN (305)
    IOTA (306)
    MEAN (307) 84
    SIZE (308) 83
    ATOI (309)
    GET (310)
    RETORNO (311) 27 28
    BREAK (312) 25
    CONTINUE (313) 26
    NEG (314)


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    s <QVector<AbstractExpr*>*> (71)
        on left: 1
        on right: 0
    lSentencia <QVector<AbstractExpr*>*> (72)
        on left: 2 3
        on right: 1 2 20 21 22 23 24 36
    sentencia <AbstractExpr*> (73)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 2 3
    ciclo_for <AbstractExpr*> (74)
        on left: 20
        on right: 10
    ciclo_while <AbstractExpr*> (75)
        on left: 21
        on right: 11
    ins_if <AbstractExpr*> (76)
        on left: 22 23 24
        on right: 12 24
    escapa <AbstractExpr*> (77)
        on left: 25 26 27
        on right: 13
    retornovalor <AbstractExpr*> (78)
        on left: 28
        on right: 14
    llamada <AbstractExpr*> (79)
        on left: 29 30
        on right: 16 82
    aumento <AbstractExpr*> (80)
        on left: 31 32
        on right: 8 20
    decremento <AbstractExpr*> (81)
        on left: 33 34
        on right: 9
    imprimir <NT_Imprimir*> (82)
        on left: 35
        on right: 6
    bloque <AbstractExpr*> (83)
        on left: 36
        on right: 7 39 40
    z (84)
        on left: 37 38
        on right: 2 3 20
    declaracion_void <AbstractExpr*> (85)
        on left: 39 40
        on right: 15
    lasig <QVector<AbstractExpr*>*> (86)
        on left: 41 42
        on right: 40 41
    lparam <QVector<AbstractExpr*>*> (87)
        on left: 43 44
        on right: 29 35 43 50
    lparamatriz <QVector<AbstractExpr*>*> (88)
        on left: 45 46
        on right: 45 51 53 81
    declaracion_var <AbstractExpr*> (89)
        on left: 47 48
        on right: 4 20 41 42
    declaracion_vector <AbstractExpr*> (90)
        on left: 49 50
        on right: 17
    declaracion_matriz <AbstractExpr*> (91)
        on left: 51
        on right: 19
    asignacion_var <AbstractExpr*> (92)
        on left: 52
        on right: 5
    asignacion_vector <AbstractExpr*> (93)
        on left: 53
        on right: 18
    x <AbstractExpr*> (94)
        on left: 54
        on right: 20 21 22 23 24 28 43 44 45 46 48 52 53
    cond <AbstractExpr*> (95)
        on left: 55 56 57 58 59 60
        on right: 54 55 56 57 58
    oprel <std::string> (96)
        on left: 61 62 63 64 65 66
        on right: 59
    expr <AbstractExpr*> (97)
        on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
        on right: 59 60 67 68 69 70 71 72 73 78
    tipo <AbstractExpr*> (98)
        on left: 89 90 91 92 93
        on right: 39 40 47 48 49 50 51


State 0

    0 $accept: . s END

    ID         shift, and go to state 1
    INT        shift, and go to state 2
    STR        shift, and go to state 3
    FLO        shift, and go to state 4
    BOOL       shift, and go to state 5
    IMPR       shift, and go to state 6
    VOID       shift, and go to state 7
    IF         shift, and go to state 8
    WHILE      shift, and go to state 9
    FOR        shift, and go to state 10
    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    VECTOR     shift, and go to state 13
    RETORNO    shift, and go to state 14
    BREAK      shift, and go to state 15
    CONTINUE   shift, and go to state 16
    '{'        shift, and go to state 17

    s                   go to state 18
    lSentencia          go to state 19
    sentencia           go to state 20
    ciclo_for           go to state 21
    ciclo_while         go to state 22
    ins_if              go to state 23
    escapa              go to state 24
    retornovalor        go to state 25
    llamada             go to state 26
    aumento             go to state 27
    decremento          go to state 28
    imprimir            go to state 29
    bloque              go to state 30
    declaracion_void    go to state 31
    declaracion_var     go to state 32
    declaracion_vector  go to state 33
    declaracion_matriz  go to state 34
    asignacion_var      go to state 35
    asignacion_vector   go to state 36
    tipo                go to state 37


State 1

   29 llamada: ID . '(' lparam ')'
   30        | ID . '(' ')'
   32 aumento: ID . INCREMENT
   34 decremento: ID . DECREMENT
   52 asignacion_var: ID . '=' x
   53 asignacion_vector: ID . lparamatriz '=' x

    INCREMENT  shift, and go to state 38
    DECREMENT  shift, and go to state 39
    '('        shift, and go to state 40
    '='        shift, and go to state 41
    '['        shift, and go to state 42

    lparamatriz  go to state 43


State 2

   89 tipo: INT .

    $default  reduce using rule 89 (tipo)


State 3

   90 tipo: STR .

    $default  reduce using rule 90 (tipo)


State 4

   91 tipo: FLO .

    $default  reduce using rule 91 (tipo)


State 5

   92 tipo: BOOL .

    $default  reduce using rule 92 (tipo)


State 6

   35 imprimir: IMPR . '(' lparam ')'

    '('  shift, and go to state 44


State 7

   93 tipo: VOID .

    $default  reduce using rule 93 (tipo)


State 8

   22 ins_if: IF . '(' x ')' '{' lSentencia '}'
   23       | IF . '(' x ')' '{' lSentencia '}' ELSE '{' lSentencia '}'
   24       | IF . '(' x ')' '{' lSentencia '}' ELSE ins_if

    '('  shift, and go to state 45


State 9

   21 ciclo_while: WHILE . '(' x ')' '{' lSentencia '}'

    '('  shift, and go to state 46


State 10

   20 ciclo_for: FOR . '(' declaracion_var z x z aumento ')' '{' lSentencia '}'

    '('  shift, and go to state 47


State 11

   31 aumento: INCREMENT . ID

    ID  shift, and go to state 48


State 12

   33 decremento: DECREMENT . ID

    ID  shift, and go to state 49


State 13

   49 declaracion_vector: VECTOR . MENOR tipo MAYOR ID
   50                   | VECTOR . MENOR tipo MAYOR ID '=' '[' lparam ']'

    MENOR  shift, and go to state 50


State 14

   27 escapa: RETORNO .
   28 retornovalor: RETORNO . x

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    ID         [reduce using rule 27 (escapa)]
    INCREMENT  [reduce using rule 27 (escapa)]
    DECREMENT  [reduce using rule 27 (escapa)]
    $default   reduce using rule 27 (escapa)

    llamada  go to state 63
    x        go to state 64
    cond     go to state 65
    expr     go to state 66


State 15

   25 escapa: BREAK .

    $default  reduce using rule 25 (escapa)


State 16

   26 escapa: CONTINUE .

    $default  reduce using rule 26 (escapa)


State 17

   36 bloque: '{' . lSentencia '}'

    ID         shift, and go to state 1
    INT        shift, and go to state 2
    STR        shift, and go to state 3
    FLO        shift, and go to state 4
    BOOL       shift, and go to state 5
    IMPR       shift, and go to state 6
    VOID       shift, and go to state 7
    IF         shift, and go to state 8
    WHILE      shift, and go to state 9
    FOR        shift, and go to state 10
    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    VECTOR     shift, and go to state 13
    RETORNO    shift, and go to state 14
    BREAK      shift, and go to state 15
    CONTINUE   shift, and go to state 16
    '{'        shift, and go to state 17

    lSentencia          go to state 67
    sentencia           go to state 20
    ciclo_for           go to state 21
    ciclo_while         go to state 22
    ins_if              go to state 23
    escapa              go to state 24
    retornovalor        go to state 25
    llamada             go to state 26
    aumento             go to state 27
    decremento          go to state 28
    imprimir            go to state 29
    bloque              go to state 30
    declaracion_void    go to state 31
    declaracion_var     go to state 32
    declaracion_vector  go to state 33
    declaracion_matriz  go to state 34
    asignacion_var      go to state 35
    asignacion_vector   go to state 36
    tipo                go to state 37


State 18

    0 $accept: s . END

    END  shift, and go to state 68


State 19

    1 s: lSentencia .
    2 lSentencia: lSentencia . sentencia z

    ID         shift, and go to state 1
    INT        shift, and go to state 2
    STR        shift, and go to state 3
    FLO        shift, and go to state 4
    BOOL       shift, and go to state 5
    IMPR       shift, and go to state 6
    VOID       shift, and go to state 7
    IF         shift, and go to state 8
    WHILE      shift, and go to state 9
    FOR        shift, and go to state 10
    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    VECTOR     shift, and go to state 13
    RETORNO    shift, and go to state 14
    BREAK      shift, and go to state 15
    CONTINUE   shift, and go to state 16
    '{'        shift, and go to state 17

    $default  reduce using rule 1 (s)

    sentencia           go to state 69
    ciclo_for           go to state 21
    ciclo_while         go to state 22
    ins_if              go to state 23
    escapa              go to state 24
    retornovalor        go to state 25
    llamada             go to state 26
    aumento             go to state 27
    decremento          go to state 28
    imprimir            go to state 29
    bloque              go to state 30
    declaracion_void    go to state 31
    declaracion_var     go to state 32
    declaracion_vector  go to state 33
    declaracion_matriz  go to state 34
    asignacion_var      go to state 35
    asignacion_vector   go to state 36
    tipo                go to state 37


State 20

    3 lSentencia: sentencia . z

    ';'  shift, and go to state 70

    $default  reduce using rule 38 (z)

    z  go to state 71


State 21

   10 sentencia: ciclo_for .

    $default  reduce using rule 10 (sentencia)


State 22

   11 sentencia: ciclo_while .

    $default  reduce using rule 11 (sentencia)


State 23

   12 sentencia: ins_if .

    $default  reduce using rule 12 (sentencia)


State 24

   13 sentencia: escapa .

    $default  reduce using rule 13 (sentencia)


State 25

   14 sentencia: retornovalor .

    $default  reduce using rule 14 (sentencia)


State 26

   16 sentencia: llamada .

    $default  reduce using rule 16 (sentencia)


State 27

    8 sentencia: aumento .

    $default  reduce using rule 8 (sentencia)


State 28

    9 sentencia: decremento .

    $default  reduce using rule 9 (sentencia)


State 29

    6 sentencia: imprimir .

    $default  reduce using rule 6 (sentencia)


State 30

    7 sentencia: bloque .

    $default  reduce using rule 7 (sentencia)


State 31

   15 sentencia: declaracion_void .

    $default  reduce using rule 15 (sentencia)


State 32

    4 sentencia: declaracion_var .

    $default  reduce using rule 4 (sentencia)


State 33

   17 sentencia: declaracion_vector .

    $default  reduce using rule 17 (sentencia)


State 34

   19 sentencia: declaracion_matriz .

    $default  reduce using rule 19 (sentencia)


State 35

    5 sentencia: asignacion_var .

    $default  reduce using rule 5 (sentencia)


State 36

   18 sentencia: asignacion_vector .

    $default  reduce using rule 18 (sentencia)


State 37

   39 declaracion_void: tipo . ID '(' ')' bloque
   40                 | tipo . ID '(' lasig ')' bloque
   47 declaracion_var: tipo . ID
   48                | tipo . ID '=' x
   51 declaracion_matriz: tipo . ID lparamatriz

    ID  shift, and go to state 72


State 38

   32 aumento: ID INCREMENT .

    $default  reduce using rule 32 (aumento)


State 39

   34 decremento: ID DECREMENT .

    $default  reduce using rule 34 (decremento)


State 40

   29 llamada: ID '(' . lparam ')'
   30        | ID '(' . ')'

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62
    ')'        shift, and go to state 73

    llamada  go to state 63
    lparam   go to state 74
    x        go to state 75
    cond     go to state 65
    expr     go to state 66


State 41

   52 asignacion_var: ID '=' . x

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    x        go to state 76
    cond     go to state 65
    expr     go to state 66


State 42

   46 lparamatriz: '[' . x ']'

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    x        go to state 77
    cond     go to state 65
    expr     go to state 66


State 43

   45 lparamatriz: lparamatriz . '[' x ']'
   53 asignacion_vector: ID lparamatriz . '=' x

    '='  shift, and go to state 78
    '['  shift, and go to state 79


State 44

   35 imprimir: IMPR '(' . lparam ')'

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    lparam   go to state 80
    x        go to state 75
    cond     go to state 65
    expr     go to state 66


State 45

   22 ins_if: IF '(' . x ')' '{' lSentencia '}'
   23       | IF '(' . x ')' '{' lSentencia '}' ELSE '{' lSentencia '}'
   24       | IF '(' . x ')' '{' lSentencia '}' ELSE ins_if

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    x        go to state 81
    cond     go to state 65
    expr     go to state 66


State 46

   21 ciclo_while: WHILE '(' . x ')' '{' lSentencia '}'

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    x        go to state 82
    cond     go to state 65
    expr     go to state 66


State 47

   20 ciclo_for: FOR '(' . declaracion_var z x z aumento ')' '{' lSentencia '}'

    INT   shift, and go to state 2
    STR   shift, and go to state 3
    FLO   shift, and go to state 4
    BOOL  shift, and go to state 5
    VOID  shift, and go to state 7

    declaracion_var  go to state 83
    tipo             go to state 84


State 48

   31 aumento: INCREMENT ID .

    $default  reduce using rule 31 (aumento)


State 49

   33 decremento: DECREMENT ID .

    $default  reduce using rule 33 (decremento)


State 50

   49 declaracion_vector: VECTOR MENOR . tipo MAYOR ID
   50                   | VECTOR MENOR . tipo MAYOR ID '=' '[' lparam ']'

    INT   shift, and go to state 2
    STR   shift, and go to state 3
    FLO   shift, and go to state 4
    BOOL  shift, and go to state 5
    VOID  shift, and go to state 7

    tipo  go to state 85


State 51

   79 expr: NUMERO .

    $default  reduce using rule 79 (expr)


State 52

   29 llamada: ID . '(' lparam ')'
   30        | ID . '(' ')'
   75 expr: ID . INCREMENT
   77     | ID . DECREMENT
   80     | ID .
   81     | ID . lparamatriz
   83     | ID . '.' SIZE '(' ')'

    INCREMENT  shift, and go to state 86
    DECREMENT  shift, and go to state 87
    '('        shift, and go to state 40
    '['        shift, and go to state 42
    '.'        shift, and go to state 88

    INCREMENT  [reduce using rule 80 (expr)]
    DECREMENT  [reduce using rule 80 (expr)]
    '('        [reduce using rule 80 (expr)]
    $default   reduce using rule 80 (expr)

    lparamatriz  go to state 89


State 53

   85 expr: STRING .

    $default  reduce using rule 85 (expr)


State 54

   86 expr: FLOAT .

    $default  reduce using rule 86 (expr)


State 55

   78 expr: MENOS . expr

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 90

    llamada  go to state 63
    expr     go to state 91


State 56

   87 expr: TRUE .

    $default  reduce using rule 87 (expr)


State 57

   88 expr: FALSE .

    $default  reduce using rule 88 (expr)


State 58

   57 cond: NOT . cond

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    cond     go to state 92
    expr     go to state 66


State 59

   74 expr: INCREMENT . ID

    ID  shift, and go to state 93


State 60

   76 expr: DECREMENT . ID

    ID  shift, and go to state 94


State 61

   84 expr: MEAN . '(' ID ')'

    '('  shift, and go to state 95


State 62

   58 cond: '(' . cond ')'
   73 expr: '(' . expr ')'

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    cond     go to state 96
    expr     go to state 97


State 63

   82 expr: llamada .

    $default  reduce using rule 82 (expr)


State 64

   28 retornovalor: RETORNO x .

    $default  reduce using rule 28 (retornovalor)


State 65

   54 x: cond .
   55 cond: cond . OR cond
   56     | cond . AND cond

    AND  shift, and go to state 98
    OR   shift, and go to state 99

    $default  reduce using rule 54 (x)


State 66

   59 cond: expr . oprel expr
   60     | expr .
   67 expr: expr . SUMA expr
   68     | expr . MENOS expr
   69     | expr . MULTIPLICACION expr
   70     | expr . DIVISION expr
   71     | expr . MOD expr
   72     | expr . EXPONENCIAL expr

    SUMA            shift, and go to state 100
    MENOS           shift, and go to state 101
    MOD             shift, and go to state 102
    MULTIPLICACION  shift, and go to state 103
    DIVISION        shift, and go to state 104
    EXPONENCIAL     shift, and go to state 105
    MENOR_IGUAL     shift, and go to state 106
    MAYOR_IGUAL     shift, and go to state 107
    IGUAL_IGUAL     shift, and go to state 108
    DIFERENTE       shift, and go to state 109
    MENOR           shift, and go to state 110
    MAYOR           shift, and go to state 111

    MENOS     [reduce using rule 60 (cond)]
    $default  reduce using rule 60 (cond)

    oprel  go to state 112


State 67

    2 lSentencia: lSentencia . sentencia z
   36 bloque: '{' lSentencia . '}'

    ID         shift, and go to state 1
    INT        shift, and go to state 2
    STR        shift, and go to state 3
    FLO        shift, and go to state 4
    BOOL       shift, and go to state 5
    IMPR       shift, and go to state 6
    VOID       shift, and go to state 7
    IF         shift, and go to state 8
    WHILE      shift, and go to state 9
    FOR        shift, and go to state 10
    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    VECTOR     shift, and go to state 13
    RETORNO    shift, and go to state 14
    BREAK      shift, and go to state 15
    CONTINUE   shift, and go to state 16
    '{'        shift, and go to state 17
    '}'        shift, and go to state 113

    sentencia           go to state 69
    ciclo_for           go to state 21
    ciclo_while         go to state 22
    ins_if              go to state 23
    escapa              go to state 24
    retornovalor        go to state 25
    llamada             go to state 26
    aumento             go to state 27
    decremento          go to state 28
    imprimir            go to state 29
    bloque              go to state 30
    declaracion_void    go to state 31
    declaracion_var     go to state 32
    declaracion_vector  go to state 33
    declaracion_matriz  go to state 34
    asignacion_var      go to state 35
    asignacion_vector   go to state 36
    tipo                go to state 37


State 68

    0 $accept: s END .

    $default  accept


State 69

    2 lSentencia: lSentencia sentencia . z

    ';'  shift, and go to state 70

    $default  reduce using rule 38 (z)

    z  go to state 114


State 70

   37 z: ';' .

    $default  reduce using rule 37 (z)


State 71

    3 lSentencia: sentencia z .

    $default  reduce using rule 3 (lSentencia)


State 72

   39 declaracion_void: tipo ID . '(' ')' bloque
   40                 | tipo ID . '(' lasig ')' bloque
   47 declaracion_var: tipo ID .
   48                | tipo ID . '=' x
   51 declaracion_matriz: tipo ID . lparamatriz

    '('  shift, and go to state 115
    '='  shift, and go to state 116
    '['  shift, and go to state 42

    $default  reduce using rule 47 (declaracion_var)

    lparamatriz  go to state 117


State 73

   30 llamada: ID '(' ')' .

    $default  reduce using rule 30 (llamada)


State 74

   29 llamada: ID '(' lparam . ')'
   43 lparam: lparam . ',' x

    ')'  shift, and go to state 118
    ','  shift, and go to state 119


State 75

   44 lparam: x .

    $default  reduce using rule 44 (lparam)


State 76

   52 asignacion_var: ID '=' x .

    $default  reduce using rule 52 (asignacion_var)


State 77

   46 lparamatriz: '[' x . ']'

    ']'  shift, and go to state 120


State 78

   53 asignacion_vector: ID lparamatriz '=' . x

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    x        go to state 121
    cond     go to state 65
    expr     go to state 66


State 79

   45 lparamatriz: lparamatriz '[' . x ']'

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    NOT        shift, and go to state 58
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 62

    llamada  go to state 63
    x        go to state 122
    cond     go to state 65
    expr     go to state 66


State 80

   35 imprimir: IMPR '(' lparam . ')'
   43 lparam: lparam . ',' x

    ')'  shift, and go to state 123
    ','  shift, and go to state 119


State 81

   22 ins_if: IF '(' x . ')' '{' lSentencia '}'
   23       | IF '(' x . ')' '{' lSentencia '}' ELSE '{' lSentencia '}'
   24       | IF '(' x . ')' '{' lSentencia '}' ELSE ins_if

    ')'  shift, and go to state 124


State 82

   21 ciclo_while: WHILE '(' x . ')' '{' lSentencia '}'

    ')'  shift, and go to state 125


State 83

   20 ciclo_for: FOR '(' declaracion_var . z x z aumento ')' '{' lSentencia '}'

    ';'  shift, and go to state 70

    $default  reduce using rule 38 (z)

    z  go to state 126


State 84

   47 declaracion_var: tipo . ID
   48                | tipo . ID '=' x

    ID  shift, and go to state 127


State 85

   49 declaracion_vector: VECTOR MENOR tipo . MAYOR ID
   50                   | VECTOR MENOR tipo . MAYOR ID '=' '[' lparam ']'

    MAYOR  shift, and go to state 128


State 86

   75 expr: ID INCREMENT .

    $default  reduce using rule 75 (expr)


State 87

   77 expr: ID DECREMENT .

    $default  reduce using rule 77 (expr)


State 88

   83 expr: ID '.' . SIZE '(' ')'

    SIZE  shift, and go to state 129


State 89

   45 lparamatriz: lparamatriz . '[' x ']'
   81 expr: ID lparamatriz .

    '['  shift, and go to state 79

    $default  reduce using rule 81 (expr)


State 90

   73 expr: '(' . expr ')'

    NUMERO     shift, and go to state 51
    ID         shift, and go to state 52
    STRING     shift, and go to state 53
    FLOAT      shift, and go to state 54
    MENOS      shift, and go to state 55
    TRUE       shift, and go to state 56
    FALSE      shift, and go to state 57
    INCREMENT  shift, and go to state 59
    DECREMENT  shift, and go to state 60
    MEAN       shift, and go to state 61
    '('        shift, and go to state 90

    llamada  go to state 63
    expr     go to state 130


State 91

   67 expr: expr . SUMA expr
   68     | expr . MENOS expr
   69     | expr . MULTIPLICACION expr
   70     | expr . DIVISION expr
   71     | expr . MOD expr
   72     | expr . EXPONENCIAL expr
   78     | MENOS expr .

    EXPONENCIAL  shift, and go to state 105

    $default  reduce using rule 78 (expr)


State 92

   55 cond: cond . OR cond
   56     | cond . AND cond
   57     | NOT cond .

    AND  shift, and go to state 98
    OR   shift, and go to state 99

    AND       [reduce using rule 57 (cond)]
    OR        [reduce using rule 57 (cond)]
    $default  reduce using rule 57 (cond)


State 93

   74 expr: INCREMENT ID .

    $default  reduce using rule 74 (expr)


State 94

   76 expr: DECREMENT ID .

    $default  reduce using rule 76 (expr)


State 95

   84 expr: MEAN '(' . ID ')'

    ID  shift, and go to state 131


State 96

   55 cond: cond . OR cond
   56     | cond . AND cond
   58     | '(' cond . ')'

    AND  shift, and go to state 98
    OR   shift, and go to state 99
    ')'  shift, and go to state 132


State 97

   59 cond: expr . oprel expr
   60     | expr .
   67 expr: expr . SUMA expr
   68     | expr . MENOS expr
   69     | expr . MULTIPLICACION expr
   70     | expr . DIVISION expr
   71     | expr . MOD expr
   72     | expr . EXPONENCIAL expr
   73     | '(' expr . ')'
